# rfid_admin

./: .gitignore  Info.plist  Makefile  Makefile.example  README.md  app.desktop.in  app_entry.sh  build.sh  build_osx_package.sh  diagram.puml  generate_icons.sh  meson.build  osx_bundler.sh  rfid.opaic.assignment.sep.nz.gschema.xml  rfidAdmin.gresource.xml
assets/icons/: icon.icns
build_scripts/: build_osx_package.sh  generate_icons.sh
src/: App.cc  App.h  AppLogger.h  BaseWindow.cc  BaseWindow.h  ControlsWindow.cc  ControlsWindow.h  InputDialog.cc  InputDialog.h  LoginWindow.cc  LoginWindow.h  NetworkClient.cc  NetworkClient.h  basic.ui  main.cc
